--- a/Airbnb_Classifier (2).ipynb
+++ b/Airbnb_Classifier (2).ipynb
@@ -43,10 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "df = pd.read_csv(\"TorontoListings.csv\")\n"
+    "df = pd.read_csv(\"TorontoListings.csv\")"
    ]
   },
   {
@@ -293,7 +290,6 @@
     }
    ],
    "source": [
-    "\n",
     "df.dtypes"
    ]
   },
@@ -1068,6 +1064,7 @@
     }
    ],
    "source": [
+    "# Move this to above cell\n",
     "df.drop(['neighbourhood_group', 'name', 'host_name'], 1, inplace = True)\n",
     "df.head()"
    ]
@@ -1176,6 +1173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Merge cells 40-45\n",
     "one_hot_df = pd.concat([df, one_hot], axis=1)\n"
    ]
   },
@@ -1197,6 +1195,8 @@
    "outputs": [],
    "source": [
     "#Encoding neighbourhood\n",
+    "\n",
+    "# Rename variable to one_hot_neighbourhood\n",
     "one_hot = pd.get_dummies(df['neighbourhood'])\n"
    ]
   },
@@ -1206,6 +1206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Rename to one_hot_encoded_df\n",
     "merged_df = pd.concat([one_hot_df, one_hot], axis=1)\n"
    ]
   },
@@ -1235,6 +1236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Rename to filtered_df\n",
     "selected_df = merged_df[merged_df['reviews_per_month'] >= 1.2] \n"
    ]
   },
@@ -1258,6 +1260,8 @@
     "    seg3 = [i for i in cols if i not in seg1 + seg2]\n",
     "    \n",
     "    return(df[seg1 + seg2 + seg3])\n",
+    "\n",
+    "# Rename to filtered_df\n",
     "selected_df = movecol(selected_df, \n",
     "             cols_to_move=['Yorkdale-Glen Park','price'], \n",
     "             ref_col='York University Heights',\n",
@@ -1284,6 +1288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Move this right before cell 93, since that's where you do the classification tasks\n",
     "def priceRanker(val):\n",
     "    if  val< 100:\n",
     "        return 1\n",
@@ -1292,6 +1297,7 @@
     "    else :\n",
     "         return 3\n",
     "\n",
+    "# Rename to filtered_df\n",
     "selected_df[\"categoryPrice\"] = df[\"price\"].apply(priceRanker)\n",
     "   "
    ]
@@ -1716,15 +1722,20 @@
     "!pip install  imbalanced-learn\n",
     "from sklearn.model_selection import train_test_split\n",
     "from imblearn.over_sampling import SMOTE\n",
+    "\n",
     "#define dataset\n",
     "X_df = selected_df.iloc[: , 7:-2]\n",
     "X = X_df.values\n",
     "y =selected_df.iloc[:, -1].values\n",
+    "\n",
     "#Splitting the dataset into the Training set and Test set\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.1, random_state = 0)\n",
+    "\n",
     "#SMOTE\n",
     "sm = SMOTE()\n",
-    "X, y = sm.fit_sample(X_train, y_train)"
+    "X, y = sm.fit_sample(X_train, y_train)\n",
+    "\n",
+    "# Right now this SMOTE data isnt being used, so if you want, move the SMOTE stuff before the train_test_split"
    ]
   },
   {
@@ -1738,7 +1749,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For cross validation purposes, I am going to train 10% of our dataset."
+    "For cross validation purposes, I am going to train 90% of our dataset."
    ]
   },
   {
@@ -1805,27 +1816,28 @@
     "best_score_DT = (0, -1)\n",
     "best_clf_DT = None\n",
     "\n",
-    "for i in range(1,21) and for j in range(20,100):\n",
-    "    clf_DT = DecisionTreeClassifier(max_depth=i, n_estiator=j,random_state=0)\n",
-    "    clf_DT.fit(X_train, y_train)\n",
-    "    y_pred_DT=clf_DT.predict(X_test)\n",
-    "    \n",
-    "    curr_acc_DT = accuracy_score(y_test, y_pred_DT)\n",
-    "    acc_score_DT.append((i, j, curr_acc_DT))\n",
-    "    \n",
-    "    if curr_acc_DT > best_score_DT[0]:\n",
-    "        best_score_DT = (curr_acc_DT, i, j)\n",
-    "        best_clf_DT = clf_DT\n",
+    "# Create nested loop\n",
+    "for i in range(1,21):\n",
+    "    for j in range(20,100):\n",
+    "        clf_DT = DecisionTreeClassifier(max_depth=i, n_estiator=j,random_state=0)\n",
+    "        clf_DT.fit(X_train, y_train)\n",
+    "        y_pred_DT=clf_DT.predict(X_test)\n",
     "\n",
-    "print(best_clf_DT)\n",
-    "acc_score_DT"
+    "        curr_acc_DT = accuracy_score(y_test, y_pred_DT)\n",
+    "        acc_score_DT.append((i, j, curr_acc_DT))\n",
+    "\n",
+    "        if curr_acc_DT > best_score_DT[0]:\n",
+    "            best_score_DT = (curr_acc_DT, i, j)\n",
+    "            best_clf_DT = clf_DT\n",
+    "\n",
+    "print(best_clf_DT)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Matrix of confusion for Decision Tree cross validation"
+    "# Matrix of confusion for Decision Tree cross validation"
    ]
   },
   {
@@ -1886,6 +1898,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.datasets import make_classification\n",
     "\n",
+    "# Convert dataset from regression to classification\n",
     "X, y = make_classification(n_samples=1000, n_features=147,\n",
     "                            n_informative=3, n_redundant=0,\n",
     "                            random_state=0, shuffle=False)\n"
@@ -1951,27 +1964,28 @@
     "acc_score_RF = []\n",
     "best_score_RF = (0, -1)\n",
     "\n",
-    "for i in range(1,21) and for j in range(20,100):\n",
-    "    clf_RF = RandomForestClassifier(max_depth=i,n_estimator=j,random_state=0)\n",
-    "    clf_RF.fit(X_train, y_train)\n",
-    "    y_pred_RF=clf_RF.predict(X_test)\n",
-    "    \n",
-    "    curr_acc_RF = accuracy_score(y_test, y_pred_RF)\n",
-    "    acc_score_RF.append((i,j, curr_acc_RF))\n",
-    "    \n",
-    "    if curr_acc_RF > best_score_RF[0]:\n",
-    "        best_score_RF = (curr_acc_RF, i, j)\n",
-    "        best_clf_DT = clf_RF\n",
+    "# Create nested for loop\n",
+    "for i in range(1,21):\n",
+    "    for j in range(20,100):\n",
+    "        clf_RF = RandomForestClassifier(max_depth=i,n_estimator=j,random_state=0)\n",
+    "        clf_RF.fit(X_train, y_train)\n",
+    "        y_pred_RF=clf_RF.predict(X_test)\n",
+    "\n",
+    "        curr_acc_RF = accuracy_score(y_test, y_pred_RF)\n",
+    "        acc_score_RF.append((i,j, curr_acc_RF))\n",
+    "\n",
+    "        if curr_acc_RF > best_score_RF[0]:\n",
+    "            best_score_RF = (curr_acc_RF, i, j)\n",
+    "            best_clf_DT = clf_RF\n",
     "        \n",
-    "print(best_clf_DT)\n",
-    "acc_score_RF\n"
+    "print(best_clf_DT)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# now We need to creat a matrix of confusion for RF cross validation "
+    "# Now we need to creat a matrix of confusion for RF cross validation "
    ]
   },
   {
@@ -2098,6 +2112,7 @@
     "    if curr_acc_knn > best_score_knn[0]:\n",
     "        best_score_knn = (curr_acc_knn, i)\n",
     "        best_clf_DT = neigh\n",
+    "\n",
     "print(best_clf_DT)\n",
     "acc_score_knn"
    ]
@@ -5627,7 +5642,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# Where is y_RFpred defined?\n",
     "prediction_RFdict = {\"y_pred\":y_RFpred, \"y_test\":y_test}\n",
     "predictions_RFdf = pd.DataFrame(prediction_RFdict)\n",
     "print(predictions_RFdf) \n",
